# cell-viewer

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.ipynb
docs/: programming_rules.md
src/cell_viewer/: __init__.py  __main__.py  main.py
src/cell_viewer/controller/: MainController.py  PlaybackController.py  controller.py
src/cell_viewer/core/: controller.py  model.py  service.py  view.py
src/cell_viewer/model/: MainModel.py  model.py
src/cell_viewer/service/: PlaybackService.py  __init__.py
src/cell_viewer/services/: PlaybackService.py
src/cell_viewer/ui/: __init__.py  main_window.py
src/cell_viewer/ui/widgets/: __init__.py  file_controls.py  frame_controls.py  image_viewer.py  interval_controls.py
src/cell_viewer/view/: MainView.py  view.py
