[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cell-viewer"
version = "0.1.0"
description = "A PySide6-based TIFF stack viewer"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "PySide6>=6.6.1",
    "numpy>=1.26.0",
    "scikit-image>=0.22.0",
    "matplotlib>=3.8.2",
    "tifffile>=2024.2.12",
]

[project.scripts]
cell-viewer = "cell_viewer.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cell_viewer"]

[tool.hatch.metadata]
allow-direct-references = true